# volumetry

./: README.md  pyproject.toml  requirements.txt
20240223 ACT8155/: 20240223 ACT8155 Basal01 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240223 ACT8155 Basal03 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240223 ACT8155 Basal04 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240223 ACT8155 Carb05 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240223 ACT8155 Carb25 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240223 ACT8155 Carb30 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt
20240307 ACT8142/: 20240307 ACT8142 Carb00 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt
20240307 ACT8143/: 20240307 ACT8143 Basal02 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240307 ACT8143 Basal04 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240307 ACT8143 Carb00 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240307 ACT8143 Carb05 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240307 ACT8143 Carb10 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  20240307 ACT8143 Carb15 [xy=0.483um, t=0.06704s] C=0 AVG1GAU3SD1 gDSD3 E2.2 PS25 F300_imgHisto.txt  (+1 more)
src/: file_extractor.py  file_processor.py  folder_processor.py  (+2 more)
(+34 files in other folders)
